# job-intelligence

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  VISION.md  pyproject.toml  requirements.txt
.github/workflows/: quality.yml  tests.yml
config/: aliases.json  categories.json  education.json  skills.json
data/: sample_jobs.csv
src/: main.py
src/job_intelligence/: analysis.py  candidate_loader.py  category.py  cli.py  education.py  loader.py  main.py  matcher.py  models.py  normalization.py  parser.py  rank_jobs.py  report.py  salary.py  scoring.py
tests/: test_analysis.py  test_candidate_loader.py  test_category.py  test_cli.py  test_education.py  test_loader.py  test_main.py  test_matcher.py  test_models.py  test_normalize.py  test_parser.py  test_rank_jobs.py  test_report.py  test_salary.py  test_scoring.py
tests/data/: sample_candidate.json
tools/: update_structure_readme.py
