[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "job-intelligence"
version = "0.2.0"
description = "Tools for analyzing and extracting intelligence from job data"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff==0.15.22",
    "black",
    "mypy",
    "pre-commit"
]

[tool.black]
target-version = ["py313"]
line-length = 88

[tool.mypy]
python_version = "3.13"